# ur3_ros2

./: README.md
ur3_vacuum_gripper/: CMakeLists.txt  package.xml
ur3_vacuum_gripper_description/: CMakeLists.txt  package.xml
ur3_vacuum_gripper_description/launch/: display.launch.py
ur3_vacuum_gripper_description/urdf/: model.urdf  temp.urdf  ur3_with_vacuum_gripper.xacro  vacuum_gripper.urdf
vacuum_gripper_description/: CMakeLists.txt  package.xml
vacuum_gripper_description/launch/: launch_gripper.py
vacuum_gripper_description/meshes/: vacuum_gripper.dae
vacuum_gripper_description/rviz/: config.rviz
vacuum_gripper_description/urdf/: vacuum_gripper.urdf  vacuum_gripper.xacro
